computer_science/knowledge/devops/Kubernetes/istio/rewrite/deployment/docs_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deployment
  namespace: development
  labels:
    app: docs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-app
  template:
    metadata:
      labels:
        app: docs-app
    spec:
      containers:
      - name: docs-container
        image: docs-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
