computer_science/knowledge/devops/Kubernetes/istio/rewrite/deployment/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  namespace: development
  labels:
    app: green-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-container
        image: my-fastapi-app:green
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
