computer_science/knowledge/devops/Kubernetes/istio/rewrite/deployment/red_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
  namespace: development
  labels:
    app: red-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red-app
  template:
    metadata:
      labels:
        app: red-app
    spec:
      containers:
      - name: fastapi-container
        image: my-fastapi-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
