computer_science/knowledge/devops/Kubernetes/istio/rewrite/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-service
  namespace: development
spec:
  selector:
    app: red-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: development
spec:
  selector:
    app: green-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
